force-app/main/default/objects/animalos__Interaction_Caution__c/animalos__Interaction_Caution__c.object-meta.xml
<CustomObject>
    <label>Interaction Caution</label>
    <nameField>
        <displayFormat>IC{000000000}</displayFormat>
        <label>Interaction Caution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Cautions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>