force-app/main/default/objects/animalos__Interaction_Caution__c/fields/animalos__Caution_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Caution_Date_Time__c</fullName>
    <label>Caution Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>