force-app/main/default/objects/animalos__Interaction_Caution__c/fields/animalos__Caution_Details__c.field-meta.xml
<CustomField>
    <fullName>animalos__Caution_Details__c</fullName>
    <label>Caution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>