force-app/main/default/objects/animalos__Interaction_Caution__c/fields/animalos__Caution_Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Caution_Source__c</fullName>
    <label>Caution Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Observed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>