force-app/main/default/objects/animalos__Interaction_Caution__c/fields/animalos__Caution_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Caution_Type__c</fullName>
    <label>Caution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Violence</fullName>
            </value>
            <value>
                <fullName>Verbal Abuse</fullName>
            </value>
            <value>
                <fullName>Firearms/weapons</fullName>
            </value>
            <value>
                <fullName>Known to Police</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
                <label>Suspected Substance Abuse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>