force-app/main/default/objects/animalos__Interaction_Caution__c/fields/animalos__Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interaction Cautions</relationshipLabel>
    <relationshipName>Interaction_Cautions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>