force-app/main/default/objects/animalos__Interaction_Caution__c/fields/animalos__Job_Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Contact</label>
    <referenceTo>animalos__Job_Contact__c</referenceTo>
    <relationshipLabel>Interaction Cautions</relationshipLabel>
    <relationshipName>Interaction_Cautions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>